Version 4.1.0
- Added option to automatically reload files changed outside the editor

Version 4.0.5
- Improvements to the Mac GUI
- On Linux, run alternate terminal (if defined) instead of xterm
- Added dialog for changing command output window font
- Added Special menu option for running proplisp
- Added menu options for downloading current buffer to TAQOZ,
  proplisp, or micropython
- For Windows, sign loadp2.exe as well as flexgui.exe and fastspin.exe.

Version 4.0.4
- Added ability to program SPI flash

Version 4.0.3
- Made version 2b the P2 default
- Added "Special" menu for running the P2 ROM monitor, TAQOZ, or micropython
- Added micropython binary to the samples directory

Version 4.0.1
- Fixed some problems with dialog boxes
- Moved the "Open Listing File..." option to the File menu

Version 4.0.0
- Allow choosing multiple include directories via the GUI

Version 3.9.34
- Enable replace functionality

Version 3.9.31
- Show previously selected font in the font chooser.
- Use panes for the top level window, to allow resizing the command output
- Print compilation time and machine
- Show links to files that have errors in them, and open those files when the links are clicked on

Version 3.9.30
- In the "Save As..." dialog use the existing file name/directory as the base
- Show a message if search terms are not found
- Updated fastspin and loadp2 to latest versions

Version 3.9.28
- Adopted new build process which uses original Tcl/Tk libraries rather than freewrap; this allows signing of the built binary.
- Updated fastspin and loadp2 to latest versions

Version 3.9.25
- No GUI changes

Version 3.9.24
- Always save new files before trying to compile them.
- Add %L to command dialog description

Version 3.9.23
- Check for file existing before trying to read its last modified
  time; if a file does not exist (removed by another program) make
  sure to write it to disk.

Version 3.9.22
- Changed version numbering to match fastspin version