@@ -19,5 +19,7 @@ source $ROOTDIR/src/autoscroll.tcl
 source $ROOTDIR/src/ctext/ctext.tcl
 source $ROOTDIR/src/checkserial.tcl
 source $ROOTDIR/src/pathbox.tcl
+source $ROOTDIR/src/fontchooser.tcl
 source $ROOTDIR/src/gui.tcl
 
+namespace import ::choosefont::choosefont
